--- a/final/src/main/webapp/CSS/comm.css
+++ b/final/src/main/webapp/CSS/comm.css
@@ -46,6 +46,9 @@ A:hover {color: #3366cc; text-decoration: underline}
 
 .searchWrap {
     position: relative;
+ border: 1px solid #DDD;
+ width:100%;
+     height: 36px;
     z-index: 100;
     margin-bottom: 26px;
 }
@@ -60,38 +63,35 @@ A:hover {color: #3366cc; text-decoration: underline}
     line-height: 0!important;
 }
 .uInputSearch {
-	
-    position: relative;
-    width: 95%;
-    height: 36px;
-    padding: 0 45px 0 15px;
-    border: 1px solid #DDD;
+	position:relative;
+   display: table;
+	width:95%;
+	height:35px;
     border-radius: 2px;
     background: #FDFDFD;
     text-align: right;
 }
 .uInputSearch input {
-    width: 100%;
-    height: 100%;
+	display: table-cell;
+	float:left;
+	width: 400px;
     border: 0;
     line-height: 36px;
     padding: 0;
     background: 0 0;
+    display: inline-block;
 }
 
 .uInputSearch button{
-    width: 45px;
-    height: 30px;
-    text-align: center;
-    color: #666;
-    font-size: 14px;     
-    position:relative;
-	float:right; 
+
+    width: 40px;
+	margin-top: 7px;
+
 }
 <!--  -->
 .cPostWrite {
     position: relative;
-    padding-bottom: 52px;
+    padding-bottom: 32px;
     border: 1px solid #D5D5D5;
     border-radius: 2px;
     background: #FFF;
@@ -111,7 +111,7 @@ ol, ul {
 
 .cPostWrite .buttonArea ul {
     float: left;
-    margin: 0 0 0 9px;
+    margin: 10px 0 0 20px;
 }
 
 .cPostWrite .buttonArea li {
@@ -137,7 +137,7 @@ div {
 }
 .cPostWrite .buttonArea .buttonSubmit {
     float: right;
-    margin: 10px 7px 0 0;
+    margin: 10px 53px 0 20px;
     text-align: right;
     font-size: 0;
 }
