--- a/final/src/main/webapp/CSS/gridStyle2.css
+++ b/final/src/main/webapp/CSS/gridStyle2.css
@@ -50,9 +50,9 @@ button:focus {
 .sidebar {
   text-align: center;
   background: #f5f5f5;
-  z-index: 1000;
+  z-index: 30;
   position: fixed;
-  width: 300px;
+  width: 200px;
   max-width: 100%;
   height: 100%;
   height: 100vh;
@@ -62,7 +62,7 @@ button:focus {
 }
 
 .sidebar h1 {
-  margin: 0.75em 0 0;
+  margin: 3em 0 0;
   font-size: 2em;
   line-height: 1;
 
@@ -95,7 +95,7 @@ button:focus {
 /* Main content */
 .main {
   position: relative;
-  z-index: 50;
+  z-index: 5;
 }
 
 /* Grid container */
@@ -144,7 +144,7 @@ button:focus {
 /* Menu button for toggling the sidebar (appears on small screen) */
 .menu-toggle {
   position: fixed;
-  z-index: 100;
+  z-index: 10;
   display: block;
   width: 25px;
   height: 25px;
@@ -248,7 +248,7 @@ button:focus {
 }
 
 .grid__item * {
-  z-index: 10;
+  z-index: 9;
 }
 
 /* grid item element and full content element styles */
@@ -489,7 +489,7 @@ button:focus {
   position: absolute;
   width: calc(100% + 5px);
   height: calc(100vh + 5px);
-  z-index: 100;
+  z-index: 10;
   top: 0;
   left: 0;
   background: #fff;
@@ -519,7 +519,7 @@ button:focus {
   height: 0;
   /* Avoid second scroll bar in Chrome! */
   visibility: hidden;
-  z-index: 400;
+  z-index: 40;
   overflow: hidden;
 }
 
@@ -690,7 +690,7 @@ button:focus {
   border: none;
   background: none;
   margin: 0;
-  z-index: 100;
+  z-index: 10;
   top: 0;
   right: 0;
   font-size: 18px;
@@ -733,14 +733,14 @@ button:focus {
 @media screen and (min-width: 600px) {
   html,
   body,
-  .container,
+  .grid-container,
   .main {
     height: 100vh;
   }
 
   .main {
     height: 100%;
-    margin-left: 10px;
+    margin-left: 200px;
   }
 
   .content__item {
@@ -751,33 +751,7 @@ button:focus {
     padding: 45px 45px 30px;
   }
 
-  /* Demo ad */
-  body #cdawrap {
-    right: auto;
-    left: 30px;
-    top: auto;
-    bottom: 0;
-    background: none;
-    border: none;
-    width: 240px;
-    background: #f5f5f5;
-  }
-
-  body #cdawrap .carbon-text {
-    color: #7b7b7b;
-  }
-
-  body #cdawrap a.carbon-poweredby {
-    color: #7883C4;
-  }
-
-  body #cdawrap a:hover.carbon-poweredby {
-    color: #333;
-  }
-
-  body #cdawrap #cda-remove {
-    display: none;
-  }
+  
 }
 @media screen and (min-width: 900px) {
   .grid {
@@ -996,7 +970,7 @@ body {
     width: 280px;
     height: 100%;
     background: #fff;
-    top: 0;
+    top: 200px;
     left: 0;
     font-size: 0.85em;
     padding: 15px 30px;
