--- a/final/src/main/webapp/CSS/poolCommon.css
+++ b/final/src/main/webapp/CSS/poolCommon.css
@@ -7,3 +7,17 @@ input[type='text']
 {
 	width: 80%;
 }
+.grid__item::before {
+    top: 5px;
+    right: 5px;
+    bottom: 5px;
+    left: 5px;
+    border: 1px solid rgba(74, 74, 74, 0.075);
+    -webkit-transition: opacity 0.3s;
+    transition: opacity 0.3s;
+  }
+
+  .grid__item:hover::before,
+  .grid__item:focus::before {
+    border: 3px solid rgba(129, 196, 131, 0.5);
+  }
