--- a/final/src/main/webapp/CSS/eachComponent.css
+++ b/final/src/main/webapp/CSS/eachComponent.css
@@ -42,6 +42,7 @@ html, body, .container, .header {
 	min-width: 100%;
 	min-height: 100%;
 	border: none;
+	background-color: rgba(0, 0, 0, 0.01)
 }
 
 .title {
@@ -58,11 +59,25 @@ html, body, .container, .header {
 }
 
 .title h1 {
-	padding: 0 0 0.2em;
-	color: #02639d;
+	padding: 0.5em 0.5em 0.5em.2em;
+	color: #fff;
 	font-weight: 800;
 	font-size: 3.25em;
 	margin: 0 auto;
+	 text-shadow: -1px 0 #bbb, 0 1px #bbb, 1px 0 #bbb, 0 -1px #bbb;
+}
+
+.title h2
+{
+	text-align: center;
+	padding: 0.5em 0.5em 0.5em 0.5em;
+	text-shadow: 2px 2px 2px #ccc;
+}
+
+.title h3
+{
+	text-align: right;
+	text-shadow: 2px 2px 2px;
 }
 
 .title p {
