--- a/final/src/main/webapp/CSS/buttons.css
+++ b/final/src/main/webapp/CSS/buttons.css
@@ -15,8 +15,7 @@
 /* Common button styles */
 .button {
 	float: left;
-	min-width: 150px;
-	max-width: 250px;
+	width:100%;
 	display: block;
 	margin: 1em;
 	padding: 1em 2em;
