--- a/final/src/main/webapp/CSS/menu.css
+++ b/final/src/main/webapp/CSS/menu.css
@@ -2,6 +2,7 @@ nav.navbar-findcond {
 	background: #47a3da; border-color : #ccc;
 	box-shadow: 0 0 2px 0 #ccc;
 	border-color: #ccc;
+	z-index: 170;
 }
 
 nav.navbar-findcond a {
