--- a/final/src/main/webapp/CSS/2colGrid.css
+++ b/final/src/main/webapp/CSS/2colGrid.css
@@ -5,20 +5,45 @@
  */
 
 body {
-    padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+    padding-top: 70px;
+    background: #f0f0f0; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
 
 .portfolio-item {
-	margin-top: 25px;
-    margin-bottom: 25px;
-
-    padding: 10px 10px;
+	margin-top: 10px;
+    margin-bottom: 10px;
+/*   	border: 5px solid #fff; */
+    background: #f0f0f0;
 }
-
+/* 
 .portfolio-item:hover {
 
 	background-color: rgba(0, 138, 230, 0.3);
-    padding: 10px 10px;
+	border: 5px solid rgba(0, 138, 230, 1.0);
+  
+} */
+
+.innerDiv
+{
+	padding: 10px 10px 10px 10px;
+	border: 5px solid #fff;
+}
+
+.innerDiv:hover {
+
+	background-color: rgba(0, 138, 230, 0.3);
+	border: 5px solid rgba(0, 138, 230, 1.0);
+  
+}
+
+.main-content
+{
+	padding: 10px 10px 10px 10px;
+}
+
+.main-content h1,h2,h3
+{
+	margin: 2px auto;
 }
 
 footer {
