--- a/final/src/main/webapp/CSS/cssReset.css
+++ b/final/src/main/webapp/CSS/cssReset.css
@@ -11,6 +11,26 @@
 	font-weight: normal;
 	font-style: normal;
 }
+@font-face {
+	font-family: 'NanumSquareR';
+	src:url('/final02/fonts/NanumSquareR.eot');
+	src:url('/final02/fonts/NanumSquareR.eot?#iefix') format('embedded-opentype'),
+		url('/final02/fonts/NanumSquareR.ttf') format('truetype'),
+/* 		url('../fonts/tmicons/cbp-tmicons.svg#cbp-tmicons') format('svg'); */
+	font-weight: normal;
+	font-style: normal;
+}
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://example.com/MaterialIcons-Regular.eot); /* For IE6-8 */
+  src: local('Material Icons'),
+       local('MaterialIcons-Regular'),
+       url(https://example.com/MaterialIcons-Regular.woff2) format('woff2'),
+       url(https://example.com/MaterialIcons-Regular.woff) format('woff'),
+       url(https://example.com/MaterialIcons-Regular.ttf) format('truetype');
+}
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
