--- a/final/src/main/webapp/CSS/eachComponent.css
+++ b/final/src/main/webapp/CSS/eachComponent.css
@@ -62,22 +62,27 @@ html, body, .container, .header {
 	padding: 0.5em 0.5em 0.5em.2em;
 	color: #fff;
 	font-weight: 800;
+	font-family: NanumSquareR;
 	font-size: 3.25em;
-	margin: 0 auto;
+	margin: 2px 2px 2px 2px;
 	 text-shadow: -1px 0 #bbb, 0 1px #bbb, 1px 0 #bbb, 0 -1px #bbb;
+
 }
+
 
 .title h2
 {
 	text-align: center;
 	padding: 0.5em 0.5em 0.5em 0.5em;
-	text-shadow: 2px 2px 2px #ccc;
+	margin: 2px 2px 2px 2px;
+	
 }
 
 .title h3
 {
 	text-align: right;
-	text-shadow: 2px 2px 2px;
+	margin: 2px 2px 2px 2px;
+
 }
 
 .title p {
