--- a/final/src/main/webapp/CSS/comm.css
+++ b/final/src/main/webapp/CSS/comm.css
@@ -56,7 +56,6 @@ A:hover {color: #3366cc; text-decoration: underline}
 
 .profileText {
     padding-left: 77px;
-    padding-top: 20px;
     height: 72px;
 }
 
@@ -65,6 +64,7 @@ A:hover {color: #3366cc; text-decoration: underline}
     color: #aaa;
     padding-right: 72px;
     font-weight: 400;
+    height: 50px;
 }
 .textName .name {
     display: inline-block;
