--- a/final/src/main/webapp/CSS/bootstrap.css
+++ b/final/src/main/webapp/CSS/bootstrap.css
@@ -41,7 +41,7 @@ audio:not([controls]) {
 }
 
 html {
-  font-family: sans-serif;
+  font-family: NanumBarunGothic;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
@@ -92,7 +92,7 @@ code,
 kbd,
 pre,
 samp {
-  font-family: monospace, serif;
+  font-family: NanumBarunGothic;
   font-size: 1em;
 }
 
@@ -300,7 +300,7 @@ html {
 }
 
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: NanumBarunGothic;
   font-size: 14px;
   line-height: 1.428571429;
   color: #333333;
@@ -462,7 +462,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: NanumSquareR;
   font-weight: 500;
   line-height: 1.1;
 }
@@ -6115,7 +6115,7 @@ body.modal-open,
   height: 20px;
   margin-top: -10px;
   margin-left: -10px;
-  font-family: serif;
+  font-family: NanumBarunGothic;
 }
 
 .carousel-control .icon-prev:before {
