--- a/final/src/main/webapp/CSS/buttons.css
+++ b/final/src/main/webapp/CSS/buttons.css
@@ -571,7 +571,7 @@
 	top: 50%;
 	left: 100%;
 	margin: -15px 0 0 1px;
-	width: 30px;
+	width: 100%;
 	height: 30px;
 	border-radius: 50%;
 	background: #3f51b5;
