--- a/final/src/main/webapp/CSS/comm.css
+++ b/final/src/main/webapp/CSS/comm.css
@@ -332,11 +332,11 @@ input, textarea {
     padding-bottom: 15px;
     text-align: left;
 }
-.uSectionTitle .count {
+.count {
     margin-left: 5px;
     vertical-align: top;
     font-size: 16px;
-    color: pink;
+    color: #FF1291;
 }
 
 .uSectionTitle+.titleAreaBtn {
