--- a/final/src/main/webapp/CSS/poolCommon.css
+++ b/final/src/main/webapp/CSS/poolCommon.css
@@ -115,8 +115,6 @@ html {
 
 #mainsection {
 	padding-top: 5%;
-	padding-left: 2%;
-	padding-right: 2%;
 	height: 100%;
 	background: #f0f0f0;
 }
@@ -389,4 +387,99 @@ scale3d
 		height: 100%;
 		background: #f0f0f0;
 	}
+}
+
+
+.select figure {
+    margin:0;
+    padding:0;
+    position:relative;
+    cursor:pointer;
+
+}
+
+.select figure img {
+    display:block;
+    position:relative;
+    z-index:10;
+
+}
+
+.select figure figcaption {
+    display:block;
+    position:absolute;
+    z-index:5;
+    -webkit-box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    box-sizing:border-box
+}
+
+.select figure h2 {
+    color:#fff;
+    font-size:50px;
+    padding: 50px;
+    text-align:center;
+    font-family: NanumSquareR;
+}
+
+.select figure p {
+    display:block;
+    font-size:20px;
+    line-height:24px;
+    margin:0;
+    padding: 32px;
+    color:#fff;
+    text-align:left
+}
+
+.select figure figcaption {
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    padding:29px 44px;
+    background-color:rgba(26,76,110,0.9);
+    text-align:center;
+    backface-visibility:hidden;
+    -webkit-transform:rotateY(-180deg);
+    -moz-transform:rotateY(-180deg);
+    transform:rotateY(-180deg);
+    -webkit-transition:all .5s;
+    -moz-transition:all .5s;
+    transition:all .5s
+}
+
+.select figure img {
+    backface-visibility:hidden;
+    -webkit-transition:all .5s;
+    -moz-transition:all .5s;
+    transition:all .5s
+}
+
+.select figure:hover img,figure.hover img {
+    -webkit-transform:rotateY(180deg);
+    -moz-transform:rotateY(180deg);
+    transform:rotateY(180deg)
+}
+
+.select figure:hover figcaption,figure.hover figcaption {
+    -webkit-transform:rotateY(0);
+    -moz-transform:rotateY(0);
+    transform:rotateY(0)
+}
+
+.main--title
+{
+	padding-bottom: 20px;
+	border-bottom: 2px solid #02639d;
+}
+
+#mainsection .row
+{
+	margin: 2% 5%;
+}
+
+.profile--div
+{
+	margin: 5% AUTO;
 }
