--- a/final/src/main/webapp/CSS/cs-select.css
+++ b/final/src/main/webapp/CSS/cs-select.css
@@ -7,6 +7,7 @@ div.cs-select {
 	background: #fff;
 	z-index: 100;
 	width: 100%;
+	height: 100%;
 	max-width: 500px;
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
