--- a/final/src/main/webapp/CSS/poolCommon2.css
+++ b/final/src/main/webapp/CSS/poolCommon2.css
@@ -439,7 +439,7 @@ scale3d
     width:100%;
     height:100%;
     padding:29px 44px;
-    background-color:rgba(26,76,110,0.9);
+    background-color:#FFFF8F;
     text-align:center;
     backface-visibility:hidden;
     -webkit-transform:rotateY(-180deg);
