--- a/final/src/main/webapp/CSS/2colGrid.css
+++ b/final/src/main/webapp/CSS/2colGrid.css
@@ -13,7 +13,7 @@ body {
 	margin-top: 10px;
     margin-bottom: 10px;
 /*   	border: 5px solid #fff; */
-    background: #f0f0f0;
+    background: #fff;
 }
 /* 
 .portfolio-item:hover {
@@ -29,9 +29,16 @@ body {
 	border: 5px solid #fff;
 }
 
+.innerDiv p
+{
+	background-color: #02639d;
+	color:#fff;
+	padding: 10px 10px;
+}
+
 .innerDiv:hover {
 
-	background-color: rgba(0, 138, 230, 0.3);
+	
 	border: 5px solid rgba(0, 138, 230, 1.0);
   
 }
@@ -49,3 +56,4 @@ body {
 footer {
     margin: 50px 0;
 }
+
