--- a/final/src/main/webapp/CSS/eachComponent.css
+++ b/final/src/main/webapp/CSS/eachComponent.css
@@ -1258,6 +1258,12 @@ button.trigger span::before {
 
 }
 
+.title span
+{
+	background: #47a3da;
+	color: #fff;
+}
+
 @media screen and (max-width: 27em) {
 	.intro-effect-jam3 .content {
 		padding: 0 2em 5em;
