--- a/final/src/main/webapp/CSS/2colGrid.css
+++ b/final/src/main/webapp/CSS/2colGrid.css
@@ -31,7 +31,7 @@ body {
 
 .innerDiv p
 {
-	background-color: #02639d;
+	background-color: rgba(0, 138, 230, 1.0);
 	color:#fff;
 	padding: 10px 10px;
 }
